--- a/app/src/main/res/layout/activity_nearby_trips.xml
+++ b/app/src/main/res/layout/activity_nearby_trips.xml
@@ -86,24 +86,23 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="141dp"
         android:layout_marginTop="376dp"
         android:layout_marginEnd="131dp"
-        android:layout_marginBottom="307dp"
+        android:layout_marginBottom="0dp"
         android:text="Search" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/new_trips"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/search"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="-1dp"
-        android:layout_marginTop="506dp"
+        android:layout_marginTop="0dp"
         android:layout_marginEnd="-3dp" />
 
     <Button
