--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -74,6 +74,14 @@
             android:layout_marginBottom="2dp"
             android:layout_alignParentEnd="true"
             android:text="email" />
+        <Button
+            android:id="@+id/send_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/phone"
+            android:layout_marginTop="2dp"
+            android:text="Send Message" />
+
 
 
     </RelativeLayout>
