--- a/app/src/main/res/layout/activity_developers_page.xml
+++ b/app/src/main/res/layout/activity_developers_page.xml
@@ -21,15 +21,15 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="192dp"
-        android:layout_height="403dp"
-        android:src="@drawable/alay"
+        android:layout_width="166dp"
+        android:layout_height="166dp"
+        android:src="@drawable/download"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.072"
+        app:layout_constraintHorizontal_bias="0.067"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.115" />
+        app:layout_constraintVertical_bias="0.331" />
 
     <TextView
         android:id="@+id/textView15"
@@ -60,30 +60,34 @@
 
     <TextView
         android:id="@+id/text_pooja"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#009688"
         android:clickable="true"
         android:text="Connect with Pooja on facebook"
+
         android:textAlignment="center"
+        android:textColor="#FBFBFB"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.386" />
+        app:layout_constraintVertical_bias="0.393" />
 
     <TextView
         android:id="@+id/text_alay"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#009688"
         android:clickable="true"
         android:text="Connect with Alay on facebook"
         android:textAlignment="center"
+        android:textColor="#FBFBFB"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.558"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.796" />
+        app:layout_constraintVertical_bias="0.787" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
