--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -8,7 +8,7 @@
     android:layout_margin="40dp">
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/showdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="choose leaving date"
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.378" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/showtime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Choose your time"
@@ -32,7 +32,7 @@
         app:layout_constraintVertical_bias="0.618" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/addtrip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add Trip"
@@ -44,7 +44,7 @@
         app:layout_constraintVertical_bias="0.973" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/choosetime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Choose Time"
@@ -56,7 +56,7 @@
         app:layout_constraintVertical_bias="0.781" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/choosedate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Choose Date"
@@ -68,7 +68,7 @@
         app:layout_constraintVertical_bias="0.514" />
 
     <Button
-        android:id="@+id/button11"
+        android:id="@+id/home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="GO TO HOME"
