--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -108,7 +108,7 @@
         android:id="@+id/neartrips"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="NearTrips"
+        android:text="SearchTrips"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.733"
