--- a/app/src/main/res/layout/activity_nearby_trips.xml
+++ b/app/src/main/res/layout/activity_nearby_trips.xml
@@ -87,9 +87,9 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="141dp"
-        android:layout_marginTop="376dp"
-        android:layout_marginEnd="131dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="371dp"
+        android:layout_marginEnd="212dp"
         android:layout_marginBottom="0dp"
         android:text="Search" />
 
@@ -124,6 +124,20 @@
         android:layout_marginTop="275dp"
         android:layout_marginEnd="33dp"
         android:text="Select Date" />
+
+    <Button
+        android:id="@+id/clear_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="274dp"
+        android:layout_marginTop="365dp"
+        android:layout_marginEnd="49dp"
+        android:layout_marginBottom="319dp"
+        android:text="Clear" />
 
 
 </RelativeLayout>
